# IsoEngine

./: .gitmodules  CMakeLIsts.txt  README.md
IsoEngineCore/: CMakeLists.txt
IsoEngineCore/includes/IsoEngineCore/: Events.h  Log.h  Shader.h  Texture.h  Window.h
IsoEngineCore/src/IsoEngineCore/: Events.cpp  Shader.cpp  Texture.cpp  Window.cpp
IsoEngineEditor/: CMakeLists.txt
IsoEngineEditor/src/: main.cpp
shaders/: fragment_shader.glsl  vertex_shader.glsl
